update start working with git correctly

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   <script src="/static/js/AkiPlatform.js" async></script>
   <!-- AKIBASE  -->
   <link rel="stylesheet" type="text/css" href="/static/css/akibase-2023.10.css">
+  <script src="/static/js/akibase-2023.10.js?r=1"></script>
   <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-  <script src="/static/js/akibase-2023.10.js"></script>
-  <script src="/static/js/main.js?r=1"></script>
-  <script src="/static/js/sorttable.js" defer></script>
+  <script src="/static/js/main.js?r=2"></script>
+  <script src="/static/js/sorttable.js?r=1" defer></script>
 </head>
 
 <body class="has-navbar-fixed-top has-background-light">
