--- a/static/html/register.html
+++ b/static/html/register.html
@@ -32,10 +32,10 @@
   <!-- AKIBASE  -->
   <link rel="stylesheet" type="text/css" href="/static/css/akibase-2023.10.css">
   <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-  <script src="/static/js/akibase-2023.10.js?r=0"></script>
-  <script src="/static/js/main.js"></script>
+  <script src="/static/js/akibase-2023.10.js?r=1"></script>
+  <script src="/static/js/main.js?r=1"></script>
   <!-- <script src="/static/js/sorttable.js"></script> -->
-  <script src="/static/js/register.js" defer></script>
+  <script src="/static/js/register.js?r=1" defer></script>
 </head>
 
 <body class="has-navbar-fixed-top has-background-grey is-justify-content-center">
