update new files static

--- a/static/html/register.html
+++ b/static/html/register.html
@@ -29,11 +29,12 @@
   </script>
   <!-- platform  -->
   <script src="/static/js/AkiPlatform.js" async></script>
-  <!-- AKIBASE  -->
-  <link rel="stylesheet" type="text/css" href="/static/css/akibase-2023.10.css">
-  <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-  <script src="/static/js/akibase-2023.10.js?r=1"></script>
-  <script src="/static/js/main.js?r=1"></script>
+    <!-- AKIBASE  -->
+    <link rel="stylesheet" type="text/css" href="/static/css/akibase-2024.01.css">
+    <script src="/static/js/akibase-2024.01.js?r=1"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/thptnghiaminh.css">
+    <script src="/static/js/main.js?r=2"></script>
+    <script src="/static/js/sorttable.js?r=1" defer></script>
   <!-- <script src="/static/js/sorttable.js"></script> -->
   <script src="/static/js/register.js?r=1" defer></script>
 </head>
