update dev true name

--- a/static/html/nav.html
+++ b/static/html/nav.html
@@ -89,8 +89,8 @@
       <div class="navbar-item LOGGED0 is-hidden">
         <div class="field is-grouped">
           <p class="control">
-            <button class="button is-light" onclick="Auth.logout(); modal.load('/static/html/login.html')">Đăng nhập</button>
-            <a class="button is-primary" onclick="Auth.register();">Đăng ký</a>
+            <button class="button is-light" onclick="AkiAuth.logout(); modal.load('/static/html/login.html')">Đăng nhập</button>
+            <a class="button is-primary" onclick="AkiAuth.register();">Đăng ký</a>
           </p>
         </div>
       </div>
@@ -108,7 +108,7 @@
             </span>
             <span>Edit Profile</span>
           </a>
-          <button class="navbar-item button is-small m-auto" onclick="Auth.logout();">
+          <button class="navbar-item button is-small m-auto" onclick="AkiAuth.logout();">
             <span class="icon">
               <i class="fa-solid fa-power-off"></i>
             </span>
